@@ -2,7 +2,6 @@ package org.jabref.gui.externalfiles;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.DirectoryStream;
 import java.nio.file.DirectoryStream.Filter;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -74,6 +73,7 @@ public class UnlinkedFilesCrawler extends BackgroundTask<FileNodeViewModel> {
      * and then sorted according to the {@link ExternalFileSorter} value.
      *
      * @param unlinkedPDFFileFilter contains a BibDatabaseContext which is used to determine whether the file is linked
+     *
      * @return FileNodeViewModel containing the data of the current directory and all subdirectories
      * @throws IOException if directory is not a directory or empty
      */
@@ -90,10 +90,9 @@ public class UnlinkedFilesCrawler extends BackgroundTask<FileNodeViewModel> {
         // Filters:
         //   1. UnlinkedPDFFileFilter
         //   2. GitIgnoreFilter
-        ChainedFilters filters = new ChainedFilters(List.of(unlinkedPDFFileFilter, new GitIgnoreFileFilter(directory)));
+        ChainedFilters filters = new ChainedFilters(unlinkedPDFFileFilter, new GitIgnoreFileFilter(directory));
         Map<Boolean, List<Path>> directoryAndFilePartition;
-        try (DirectoryStream<Path> dirStream = Files.newDirectoryStream(directory, filters);
-             Stream<Path> filesStream = StreamSupport.stream(dirStream.spliterator(), false)) {
+        try (Stream<Path> filesStream = StreamSupport.stream(Files.newDirectoryStream(directory, filters).spliterator(), false)) {
             directoryAndFilePartition = filesStream.collect(Collectors.partitioningBy(Files::isDirectory));
         } catch (IOException e) {
             LOGGER.error("Error while searching files", e);
@@ -137,8 +136,8 @@ public class UnlinkedFilesCrawler extends BackgroundTask<FileNodeViewModel> {
 
         // create and add FileNodeViewModel to the FileNodeViewModel for the current directory
         fileNodeViewModelForCurrentDirectory.getChildren().addAll(resultingFiles.stream()
-                                                                                .map(FileNodeViewModel::new)
-                                                                                .toList());
+                .map(FileNodeViewModel::new)
+                .collect(Collectors.toList()));
 
         return fileNodeViewModelForCurrentDirectory;
     }
