@@ -1,6 +1,7 @@
 package org.jabref.gui.maintable.columns;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 import javafx.scene.Node;
@@ -25,8 +26,6 @@ import org.jabref.logic.util.TaskExecutor;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.LinkedFile;
 
-import org.jspecify.annotations.NonNull;
-
 /**
  * A column that draws a clickable symbol for either all the files of a defined file type
  * or a joined column with all the files of any type
@@ -42,12 +41,12 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
      * Creates a joined column for all the linked files.
      */
     public FileColumn(MainTableColumnModel model,
-                      @NonNull BibDatabaseContext database,
+                      BibDatabaseContext database,
                       DialogService dialogService,
                       GuiPreferences preferences,
                       TaskExecutor taskExecutor) {
         super(model);
-        this.database = database;
+        this.database = Objects.requireNonNull(database);
         this.dialogService = dialogService;
         this.preferences = preferences;
         this.taskExecutor = taskExecutor;
@@ -81,13 +80,13 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
      * Creates a column for all the linked files of a single file type.
      */
     public FileColumn(MainTableColumnModel model,
-                      @NonNull BibDatabaseContext database,
+                      BibDatabaseContext database,
                       DialogService dialogService,
                       GuiPreferences preferences,
                       String fileType,
                       TaskExecutor taskExecutor) {
         super(model);
-        this.database = database;
+        this.database = Objects.requireNonNull(database);
         this.dialogService = dialogService;
         this.preferences = preferences;
         this.taskExecutor = taskExecutor;
@@ -105,7 +104,7 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
                 .withOnMouseClickedEvent((entry, linkedFiles) -> event -> {
                     List<LinkedFile> filteredFiles = linkedFiles.stream()
                                                                 .filter(linkedFile -> linkedFile.getFileType().equalsIgnoreCase(fileType))
-                                                                .toList();
+                                                                .collect(Collectors.toList());
 
                     if (event.getButton() == MouseButton.PRIMARY) {
                         if (filteredFiles.size() == 1) {
@@ -121,7 +120,7 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
                                         entry.getEntry(), database, taskExecutor, dialogService, preferences);
                                 MenuItem menuItem = new MenuItem(linkedFileViewModel.getTruncatedDescriptionAndLink(),
                                         linkedFileViewModel.getTypeIcon().getGraphicNode());
-                                menuItem.setOnAction(_ -> linkedFileViewModel.open());
+                                menuItem.setOnAction(e -> linkedFileViewModel.open());
                                 contextMenu.getItems().add(menuItem);
                             }
                             contextMenu.show((Node) event.getSource(), event.getScreenX(), event.getScreenY());
